screencasting: Do not crash when the platform cannot provide textures

When using the QPainter backend, we will be getting null textures. Just
ignore these as the backend isn't all that important.

BUG: 442711


(cherry picked from commit 9bda050d84ed493cbe429116b32739a72e3ce994)